setup code display w/ initial syntax highlighting

--- a/lib/styles/hybrid.css
+++ b/lib/styles/hybrid.css
@@ -16,12 +16,14 @@ vim-hybrid theme by w0ng (https://github.com/w0ng/vim-hybrid)
 /*selection color*/
 .hljs::selection,
 .hljs span::selection {
-  background: #373b41;
+  background: white;
+  color: black;
 }
 
 .hljs::-moz-selection,
 .hljs span::-moz-selection {
-  background: #373b41;
+  background: white;
+  color: black;
 }
 
 /*foreground color*/
