refined selected text styling

--- a/lib/styles/hybrid.css
+++ b/lib/styles/hybrid.css
@@ -16,14 +16,7 @@ vim-hybrid theme by w0ng (https://github.com/w0ng/vim-hybrid)
 /*selection color*/
 .hljs::selection,
 .hljs span::selection {
-  background: white;
-  color: black;
-}
-
-.hljs::-moz-selection,
-.hljs span::-moz-selection {
-  background: white;
-  color: black;
+  background: #06a;
 }
 
 /*foreground color*/
