--- a/app-theme.css
+++ b/app-theme.css
@@ -1,15 +1,52 @@
 
-body, pre, code {
+body, pre, code, div {
     margin: 0;
     padding: 0;
 }
 
-code {
+.container {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: calc(100vw - 1em);
-    height: calc(100vh - 1em);
+    display: flex;
+    flex-direction: row;
+    height: 100vh;
+    width: 100vw;
+}
+
+.container > * {
+    flex-align: stretch;
+}
+
+.file-pane {
+    width: 200px;
+    background: #666;
+    overflow-x: hidden;
+}
+
+.code-pane {
+    flex: 1;
+    display: flex;
+}
+
+.file-list {
+    margin: 1em 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.file-list > li {
+    font-family: Segoe UI;
+    font-weight: 500;
+    font-size: 14px;
+    padding: 0.2em 0.5em;
+    cursor: pointer;
+}
+
+.file-list > li.selected {
+    background: #999;
+}
+
+code {
+    flex: 1;
 }
 
 .diff-added {
