--- a/app-theme.css
+++ b/app-theme.css
@@ -4,6 +4,10 @@ body, pre, code, div {
     padding: 0;
 }
 
+body {
+    font-family: Segoe UI;
+}
+
 .container {
     position: absolute;
     display: flex;
@@ -21,7 +25,6 @@ body, pre, code, div {
     background: #444;
     overflow-x: hidden;
     color: white;
-    font-family: Segoe UI;
     font-weight: 400;
     font-size: 13px;
 }
@@ -72,5 +75,65 @@ code.hljs {
 
 .hljs::selection,
 .hljs span::selection {
-  background: #06a;
+    background: #06a;
+}
+
+.dialog {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    padding: 50px;
+    box-sizing: border-box;
+}
+
+.dialog > * {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 4px 10px #111;
+}
+
+.dialog title {
+    display: block;
+    border-radius: 6px 6px 0 0;
+    background: #484;
+    font-size: 24px;
+    color: #eee;
+    padding: 8px 16px 10px 16px;
+    text-shadow: 0 0 2px #333;
+    border-top: 1px solid #696
+}
+
+.dialog content {
+    display: block;
+    flex: 1;
+    background: #eee;
+    color: #222;
+    padding: 10px;
+}
+
+.dialog footer {
+    border-top: 1px solid #d6d6d6;
+    background: #ddd;
+    color: #222;
+    padding: 10px;
+    text-align: right;
+    border-radius: 0 0 6px 6px;
+}
+
+button {
+    cursor: pointer;
+    font-family: Segoe UI;
+    font-size: 15px;
+    font-weight: 500;
+    padding: 5px 10px;
+    background: #bbb;
+    border-radius: 3px;
+    border: 1px solid #a9a9a9;
+}
+
+#import-dialog {
 }
