--- a/app-theme.css
+++ b/app-theme.css
@@ -101,7 +101,7 @@ code.hljs {
     border-radius: 6px 6px 0 0;
     background: #484;
     font-size: 24px;
-    color: #eee;
+    color: white;
     padding: 8px 16px 10px 16px;
     text-shadow: 0 0 2px #333;
     border-top: 1px solid #696
