moved menu bar management into a new class
also many style tweaks to the import dialog (now using a dark theme) and
menu bar (larger click regions and an "add iteration" button)

--- a/partials/ImportDialog.html
+++ b/partials/ImportDialog.html
@@ -3,6 +3,7 @@
     <content>
     </content>
     <footer>
-        <button class="close">Close</button>
+        <div class="filler"></div>
+        <button class="close">Back</button>
     </footer>
 </div>
