--- a/resources/app-theme.css
+++ b/resources/app-theme.css
@@ -14,6 +14,7 @@ body, pre, code, div {
 
 body {
     font-family: Segoe UI;
+    background: #1d1f21;
 }
 
 .container-outer {
@@ -24,7 +25,8 @@ body {
     flex-direction: column;
 }
 
-.menu-bar {
+.menu-bar, .dialog title {
+    display: block;
     height: 40px;
     background: #484;
     padding-left: 8px;
@@ -35,6 +37,7 @@ body {
     color: white;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.45);
     z-index: 10;
+    text-shadow: 0 0 2px #333;
 }
 
 .iteration {
@@ -45,8 +48,13 @@ body {
         rgba(0, 0, 0, 0.35) 11px,
         #484 16px,
         #484 100%);
-    padding: 0 2px 0 20px;
+    padding: 0 8px 0 20px;
     cursor: pointer;
+    box-sizing: border-box;
+}
+
+.iteration.new-iteration {
+    padding-right: 12px;
 }
 
 .container-inner {
@@ -57,7 +65,6 @@ body {
 
 .file-pane {
     width: 200px;
-    background: #444;
     overflow-x: hidden;
     color: white;
     font-weight: 400;
@@ -131,60 +138,58 @@ code.hljs {
 }
 
 .dialog {
+    z-index: 20;
     position: absolute;
     left: 0;
     top: 0;
     width: 100vw;
     height: 100vh;
     display: flex;
-    padding: 50px;
-    box-sizing: border-box;
 }
 
 .dialog > * {
     flex: 1;
     display: flex;
     flex-direction: column;
-    box-shadow: 0 4px 10px #111;
 }
 
 .dialog title {
-    display: block;
-    border-radius: 6px 6px 0 0;
-    background: #484;
-    font-size: 24px;
-    color: white;
-    padding: 8px 16px 10px 16px;
-    text-shadow: 0 0 2px #333;
-    border-top: 1px solid #696
+    z-index: 21;
 }
 
 .dialog content {
     display: block;
     flex: 1;
-    background: #eee;
+    background: #1d1f21;
     color: #222;
     padding: 10px;
 }
 
 .dialog footer {
-    border-top: 1px solid #d6d6d6;
-    background: #ddd;
+    background: #444;
+    display: flex;
     color: #222;
-    padding: 10px;
+/*    padding: 8px 8px 10px 8px;*/
+    height: 40px;
     text-align: right;
-    border-radius: 0 0 6px 6px;
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.45);
+}
+
+.filler {
+    flex: 1;
 }
 
 button {
     cursor: pointer;
-    font-family: Segoe UI;
-    font-size: 15px;
+    font-family: 'Averia Sans Libre', cursive;
+    font-style: italic;
+    font-size: 20px;
     font-weight: 500;
     padding: 5px 10px;
     background: #bbb;
-    border-radius: 3px;
-    border: 1px solid #a9a9a9;
+    border: 0;
+/*    border-radius: 3px;*/
+/*    border: 1px solid #a9a9a9;*/
 }
 
 #import-dialog {
