--- a/partials/ImportDialog.html
+++ b/partials/ImportDialog.html
@@ -1,6 +1,25 @@
 <div id="import-dialog">
     <title>New Review</title>
     <content>
+        <div class="column">
+            <label>Changes
+                <div class="changes filler"></div>
+            </label>
+        </div>
+        <div class="column">
+            <label for="review-title">Title</label>
+            <input id="review-title" type="text" min="5" />
+            
+            <label for="review-reviewers">Reviewers</label>
+            <div id="revier-container" style="display: none"></div>
+            <div class="row-group">
+                <input id="review-nameentry" class="filler" type="text" min="5" />
+                <button id="add-reviewer">+</button>
+            </div>
+            
+            <label for="review-description">Description</label>
+            <textarea id="review-description" class="filler"></textarea>
+        </div>
     </content>
     <footer>
         <div class="filler"></div>
