--- a/resources/app-theme.css
+++ b/resources/app-theme.css
@@ -13,7 +13,7 @@ body, pre, code, div {
 }
 
 body {
-    font-family: Segoe UI;
+    font-family: Segoe UI, sans-serif;
     background: #1d1f21;
 }
 
@@ -137,6 +137,11 @@ code.hljs {
     background: #06a;
 }
 
+label {
+    font-size: 18px;
+    line-height: 30px;
+}
+
 .dialog {
     z-index: 20;
     position: absolute;
@@ -160,24 +165,38 @@ code.hljs {
 .dialog content {
     display: block;
     flex: 1;
-    background: #1d1f21;
-    color: #222;
-    padding: 10px;
+    background: #444;
+    color: #ddd;
 }
 
 .dialog footer {
-    background: #444;
+    background: #666;
     display: flex;
     color: #222;
-/*    padding: 8px 8px 10px 8px;*/
     height: 40px;
     text-align: right;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.45);
+}
+.dialog footer button {
+    font-size: 20px;
+    padding: 5px 10px;
+}
+
+.row-group {
+    display: flex;
+}
+
+.row-group > button {
+    padding: 0 10px;
+    font-size: 22px;
+    background: #484;
+    color: white;
 }
 
 .filler {
     flex: 1;
 }
+
 
 button {
     cursor: pointer;
@@ -185,12 +204,36 @@ button {
     font-style: italic;
     font-size: 20px;
     font-weight: 500;
-    padding: 5px 10px;
     background: #bbb;
     border: 0;
-/*    border-radius: 3px;*/
-/*    border: 1px solid #a9a9a9;*/
 }
 
-#import-dialog {
+.dialog #import-dialog content {
+    display: flex;
+}
+
+#revier-container {
+    margin-bottom: 6px;
+}
+
+#revier-container > * {
+    font-size: 14px;
+}
+
+.column {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    padding: 10px;
+}
+
+.column input, .column textarea {
+    resize: none;
+    background: #1d1f21;
+    border: 0;
+    box-shadow: inset 0 1px 6px black;
+    color: #eee;
+    font-family: Segoe UI, sans-serif;
+    font-size: 16px;
+    padding: 5px 8px;
 }
