--- a/resources/app-theme.css
+++ b/resources/app-theme.css
@@ -216,7 +216,7 @@ button {
     margin-bottom: 6px;
 }
 
-#revier-container > * {
+#revier-container > *, #change-container {
     font-size: 14px;
 }
 
