--- a/partials/ImportDialog.html
+++ b/partials/ImportDialog.html
@@ -10,7 +10,7 @@
             <input id="review-title" type="text" min="5" max="1000" />
             
             <label for="review-reviewers">Reviewers</label>
-            <div id="revier-container" style="display: none"></div>
+            <div id="reviewer-container" style="display: none"></div>
             <div class="row-group">
                 <input id="review-nameentry" class="filler" type="text" min="5" />
                 <button id="add-reviewer">+</button>
