--- a/resources/app-theme.css
+++ b/resources/app-theme.css
@@ -197,6 +197,9 @@ label {
     flex: 1;
 }
 
+.error {
+    color: #f54;
+}
 
 button {
     cursor: pointer;
@@ -212,11 +215,11 @@ button {
     display: flex;
 }
 
-#revier-container {
+#reviewer-container {
     margin-bottom: 6px;
 }
 
-#revier-container > *, #change-container {
+#reviewer-container > *, #change-container {
     font-size: 14px;
 }
 
