--- a/resources/app-theme.css
+++ b/resources/app-theme.css
@@ -223,6 +223,36 @@ button {
     font-size: 14px;
 }
 
+#change-container {
+    overflow: auto;
+    box-sizing: border-box;
+    margin-right: -10px;
+    padding-right: 10px;
+}
+
+.tree, .tree-node {
+    white-space: nowrap;
+}
+
+.tree {
+    padding: 0 20px;
+}
+
+.tree-node {
+    list-style-type: none;
+}
+
+.tree-node {
+    list-style-type: none;
+}
+.tree-node:before {
+    content: "\f096";
+    font-family: "FontAwesome";
+    display: inline-block;
+    width: 20px;
+    margin-left: -20px;
+}
+
 .column {
     display: flex;
     flex: 1;
