added form validation to the import dialog and a "Create Review" button

--- a/partials/ImportDialog.html
+++ b/partials/ImportDialog.html
@@ -8,20 +8,21 @@
         <div class="column">
             <label for="review-title">Title</label>
             <input id="review-title" type="text" min="5" max="1000" />
-            
+
             <label for="review-reviewers">Reviewers</label>
             <div id="reviewer-container" style="display: none"></div>
             <div class="row-group">
                 <input id="review-nameentry" class="filler" type="text" min="5" />
                 <button id="add-reviewer">+</button>
             </div>
-            
+
             <label for="review-description">Description</label>
             <textarea id="review-description" class="filler"></textarea>
         </div>
     </content>
     <footer>
-        <div class="filler"></div>
         <button class="close">Back</button>
+        <div class="filler"></div>
+        <button class="save disabled">Create Review</button>
     </footer>
 </div>
