--- a/resources/app-theme.css
+++ b/resources/app-theme.css
@@ -182,8 +182,13 @@ label {
     padding: 5px 10px;
 }
 
-.row-group {
+.row-group, .toolbar {
     display: flex;
+}
+
+.toolbar, .toolbar label {
+    font-size: 14px;
+    line-height: 26px;
 }
 
 .row-group > button {
@@ -222,8 +227,26 @@ button.save.disabled {
     color: black;
 }
 
+select {
+    background: #888;
+    border: none;
+    color: black;
+    font-family: inherit;
+    font-size: 14px;
+    height: 24px;
+}
+
+option::focus {
+    background: white;
+}
+
 .dialog #import-dialog content {
     display: flex;
+}
+
+#change-container > * {
+    display: flex;
+    flex-direction: column;
 }
 
 #reviewer-container {
@@ -235,9 +258,13 @@ button.save.disabled {
 }
 
 #change-container {
+    margin-top: 5px;
+    margin-right: -10px;
+}
+
+#change-container .content {
     overflow: auto;
     box-sizing: border-box;
-    margin-right: -10px;
     padding: 4px 0;
 }
 
