moved changes tree controls into the TfsChanges component
also, all changes default to selected when loaded and the workspace
picker is disabled while workspace changes are loading

--- a/resources/app-theme.css
+++ b/resources/app-theme.css
@@ -234,17 +234,14 @@ select {
     font-family: inherit;
     font-size: 14px;
     height: 30px;
-}
-
-option::focus {
-    background: white;
+    cursor: pointer;
 }
 
 .dialog #import-dialog content {
     display: flex;
 }
 
-#change-container > * {
+#change-container, #change-container > * {
     display: flex;
     flex-direction: column;
 }
