added doc icons to the changes tree to help visually distinguish them
also disabled user selection in the app to prevent clicks triggering
unnecessary selection

--- a/resources/app-theme.css
+++ b/resources/app-theme.css
@@ -10,6 +10,9 @@
 body, pre, code, div {
     margin: 0;
     padding: 0;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 body {
@@ -291,6 +294,7 @@ select {
 
 .tree-node > span:before {
     font-family: "FontAwesome";
+    content: "\f0f6";
     display: inline-block;
     width: 28px;
     padding-left: 6px;
