added a Back button to the loading changes page
also fleshed out the ElementProxy class a bit

--- a/partials/ImportDialog.html
+++ b/partials/ImportDialog.html
@@ -26,11 +26,16 @@
             <div class="filler"></div>
             <button class="save disabled">Create Review</button>
         </footer>
+        
         <content class="import-status" style="display: none">
             <label>Loading changes...</label>
             <div class="filler">
                 <ul class="tree"></ul>
             </div>
         </content>
+        <footer class="import-status">
+            <button class="close">Back</button>
+            <div class="filler"></div>
+        </footer>
     </div>
 </div>
