--- a/partials/ImportDialog.html
+++ b/partials/ImportDialog.html
@@ -6,16 +6,9 @@
                 <label>Changes</label>
                 <div id="change-container" class="filler"></div>
             </div>
-            <div class="column">
+            <div class="new-review-right column">
                 <label for="review-title">Title</label>
                 <input id="review-title" type="text" min="5" max="1000" />
-
-                <label for="review-reviewers">Reviewers</label>
-                <div id="reviewer-container" style="display: none"></div>
-                <div class="row-group">
-                    <input id="review-nameentry" class="filler" type="text" min="5" />
-                    <button id="add-reviewer">+</button>
-                </div>
 
                 <label for="review-description">Description</label>
                 <textarea id="review-description" class="filler"></textarea>
