implemented email suggestion UI

--- a/partials/EmailEntry.html
+++ b/partials/EmailEntry.html
@@ -5,4 +5,7 @@
         <input id="review-nameentry" class="filler" type="text" min="3" />
         <button id="add-reviewer">+</button>
     </div>
+    <div class="dropdown-anchor">
+        <div class="menu email-suggestions" style="display: none"></div>
+    </div>
 </div>
