--- a/partials/EmailEntry.html
+++ b/partials/EmailEntry.html
@@ -3,7 +3,7 @@
     <div id="reviewer-container" style="display: none"></div>
     <div class="row-group">
         <input id="review-nameentry" class="filler" type="text" min="3" />
-        <button id="add-reviewer">+</button>
+        <button id="add-reviewer" class="disabled">+</button>
     </div>
     <div class="dropdown-anchor">
         <div class="menu email-suggestions" style="display: none"></div>
