--- a/resources/app-theme.css
+++ b/resources/app-theme.css
@@ -10,9 +10,6 @@
 body, pre, code, div {
     margin: 0;
     padding: 0;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
 }
 
 body {
@@ -67,6 +64,8 @@ body {
 }
 
 .file-pane {
+    display: flex;
+    flex-direction: column;
     width: 200px;
     overflow-x: hidden;
     color: white;
@@ -77,6 +76,7 @@ body {
         #444 calc(100% - 5px),
         #111 calc(100% - 4.999px),
         #1d1f21 100%);
+    
 }
 
 .code-pane {
@@ -88,6 +88,9 @@ body {
     margin: 1em 0;
     padding: 0;
     list-style-type: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 .file-list > li {
@@ -125,14 +128,12 @@ code.hljs {
     background: #040;
     border-bottom: 1px solid #040;
     outline: 1px solid #007700;
-    margin: 0 0 -1px 0;
 }
 
 .diff-removed {
     background: #400;
     border-bottom: 1px solid #400;
     outline: 1px solid #770000;
-    margin: 0 0 -1px 0;
 }
 
 .hljs::selection,
@@ -154,6 +155,9 @@ label {
     width: 100vw;
     height: 100vh;
     display: flex;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 .dialog > * {
@@ -184,6 +188,26 @@ label {
 .dialog footer button {
     font-size: 20px;
     padding: 5px 10px;
+}
+
+.file-pane footer {
+    display: flex;
+    padding-right: 5px;
+}
+
+.file-pane footer > button {
+    flex: 1 1 auto;
+    font-size: 14px;
+    font-family: Segoe UI, sans-serif;
+    font-weight: normal;
+    font-style: normal;
+    background: #666;
+    color: #bbb;
+}
+
+.file-pane footer > button.selected {
+    background: #484;
+    color: #ddd;
 }
 
 .row-group, .toolbar {
