implemented adding iterations
switching the active iterations is not yet implemented, but the UI
distinguishes them

--- a/partials/ImportDialog.html
+++ b/partials/ImportDialog.html
@@ -15,11 +15,13 @@
             </div>
         </content>
         <footer class="import-content">
-            <button class="close">Back</button>
+            <button class="close" style="display: none">Back</button>
             <div class="filler"></div>
             <button class="save disabled">Create Review</button>
         </footer>
         
+        
+        <!-- "Loading Changes..." UI-->
         <content class="import-status" style="display: none">
             <label>Loading changes...</label>
             <div class="filler">
