--- a/resources/app-theme.css
+++ b/resources/app-theme.css
@@ -25,6 +25,12 @@ body {
     flex-direction: column;
 }
 
+.menu-bar, .file-list {
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
+
 .menu-bar, .dialog title {
     display: block;
     height: 40px;
@@ -57,6 +63,10 @@ body {
     padding-right: 12px;
 }
 
+.iteration.active {
+    text-decoration: underline;
+}
+
 .container-inner {
     flex: 1;
     display: flex;
@@ -76,7 +86,6 @@ body {
         #444 calc(100% - 5px),
         #111 calc(100% - 4.999px),
         #1d1f21 100%);
-    
 }
 
 .file-pane > content {
@@ -93,13 +102,10 @@ body {
     margin: 10px 0;
     padding: 0;
     list-style-type: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
 }
 
 .file-list > li {
-    padding: 4px 10px 6px 24px;
+    padding: 4px 10px 5px 24px;
     cursor: pointer;
     background: linear-gradient(90deg,
         #444 0%,
@@ -124,9 +130,8 @@ body {
 .file-list > li:before {
     font-family: "FontAwesome";
     display: inline-block;
-    width: 22px;
-    padding-left: 6px;
-    margin-left: -22px;
+    width: 16px;
+    margin-left: -16px;
     box-sizing: border-box;
     font-size: 11px;
 }
@@ -157,6 +162,8 @@ body {
     font-size: 17px;
     line-height: 11px;
     font-weight: bold;
+    width: 18px;
+    margin-left: -18px;
 }
 
 code {
