style tweaks to the diff outlines for less overlapping

--- a/resources/app-theme.css
+++ b/resources/app-theme.css
@@ -178,12 +178,14 @@ code.hljs {
     background: #040;
     border-bottom: 1px solid #040;
     outline: 1px solid #007700;
+    outline-offset: -1px;
 }
 
 .diff-removed {
     background: #400;
     border-bottom: 1px solid #400;
     outline: 1px solid #770000;
+    outline-offset: -1px;
 }
 
 .hljs::selection,
