--- a/resources/app-theme.css
+++ b/resources/app-theme.css
@@ -174,6 +174,10 @@ code.hljs {
     padding: 15px;
 }
 
+.code-line:hover {
+    background: gray;
+}
+
 .diff-added {
     background: #040;
     border-bottom: 1px solid #040;
