added the User class
- populated App.user with the current OS user info as returned by
EmailChecker
- added the concept of "owning user" to a Review

--- a/resources/app-theme.css
+++ b/resources/app-theme.css
@@ -15,6 +15,7 @@ body, pre, code, div {
 body {
     font-family: Segoe UI, sans-serif;
     background: #1d1f21;
+    color: white;
 }
 
 ::-webkit-scrollbar {
