implemented text editing inside comment code
- implemented syntax-highlight of comment code on blur of the code area
to avoid interfering with the caret position/selection
- switched the plain-text comment area (now called a "note") with a
contenteditable element to get automatic resize-to-content behavior
- as both are now rich HTML areas, I modified both to accept only
plain-text from the clipboard to keep the content sane

--- a/partials/CodeComment.html
+++ b/partials/CodeComment.html
@@ -1,4 +1,4 @@
 <comment>
-    <code></code>
-    <textarea></textarea>
+    <code contenteditable="true"></code>
+    <note contenteditable="true"></note>
 </comment>
