--- a/resources/app-theme.css
+++ b/resources/app-theme.css
@@ -95,6 +95,13 @@ body {
     color: white;
     font-weight: 400;
     font-size: 13px;
+    margin-right: -5px;
+    z-index: 2;
+}
+.file-pane > header,
+.file-pane > footer,
+.file-pane > content > .filler,
+.file-pane > content li {
     background: linear-gradient(90deg,
         #444 0%,
         #444 calc(100% - 5px),
@@ -114,6 +121,8 @@ body {
 .file-pane > content {
     overflow-y: auto;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 .file-list {
@@ -125,24 +134,36 @@ body {
 .file-list > li {
     padding: 4px 10px 5px 24px;
     cursor: pointer;
-    background: linear-gradient(90deg,
-        #444 0%,
-        #444 calc(100% - 5px),
-        #111 calc(100% - 4.999px),
-        #1d1f21 100%);
 }
 
 .file-list > li.selected {
+    position: relative;
+    margin-right: 5px;
     background:
-        linear-gradient(90deg,
-            rgba(29,31,33,0) 0%,
-            rgba(29,31,33,0) calc(100% - 6px),
-            #1d1f21 100%),
         linear-gradient(180deg,
             #111 0,
             #1d1f21 5px,
             #1d1f21 calc(100% - 3px),
             #161616 100%);
+}
+
+.file-list > li.selected:after {
+    content: " ";
+    position: absolute;
+    right: -5px;
+    top: 0;
+    width: 5px;
+    height: 100%;
+    background:
+        radial-gradient(5px at top left,
+            rgba(0, 0, 0, 0.35) 0%,
+            transparent 5px),
+        radial-gradient(ellipse 5px 3px at bottom left,
+            rgba(0, 0, 0, 0.3) 0%,
+            transparent 5px),
+        linear-gradient(90deg,
+            #1d1f21 0%,
+            transparent 100%);
 }
 
 .file-list > li:before {
@@ -198,9 +219,8 @@ body {
 .code-pane > header {
     flex: 0 1 auto;
     height: 30px;
-    margin-left: -5px;
     margin-bottom: -4px;
-    z-index: 1;
+    z-index: 2;
     background: linear-gradient(180deg, #444, #444 calc(100% - 4px), rgba(0, 0, 0, 0.5) calc(100% - 4px), transparent 100%);
 }
 .code-pane > header > button {
