--- a/resources/app-theme.css
+++ b/resources/app-theme.css
@@ -94,7 +94,7 @@ body {
     overflow-x: hidden;
     color: white;
     font-weight: 400;
-    font-size: 13px;
+    font-size: 14px;
     margin-right: -5px;
     z-index: 2;
 }
@@ -132,13 +132,19 @@ body {
 }
 
 .file-list > li {
-    padding: 4px 10px 5px 24px;
+    padding: 3px 10px 4px 24px;
     cursor: pointer;
+}
+.file-list li {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .file-list > li.selected {
     position: relative;
     margin-right: 5px;
+    padding-right: 5px;
     background:
         linear-gradient(180deg,
             #111 0,
@@ -203,6 +209,19 @@ body {
     font-weight: bold;
     width: 18px;
     margin-left: -18px;
+}
+
+.file-list > li > ul {
+    list-style-type: none;
+    color: #ddd;
+    font-size: 13px;
+    line-height: 20px;
+    padding-left: 10px;
+    margin-right: -5px;
+}
+
+.file-list > li > ul > li {
+    background: transparent;
 }
 
 .code-pane {
