all comments at a location are now displayed

--- a/partials/CodeComment.html
+++ b/partials/CodeComment.html
@@ -1,4 +1,5 @@
 <comment>
+    <iterations></iterations>
     <code contenteditable="true"></code>
     <note contenteditable="true"></note>
 </comment>
