added gravatars and comment deletion

--- a/partials/CodeComment.html
+++ b/partials/CodeComment.html
@@ -1,5 +1,8 @@
 <comment>
     <iterations></iterations>
     <code contenteditable="true"></code>
-    <note contenteditable="true"></note>
+    <footer>
+        <note contenteditable="true"></note>
+        <button class="delete"></button>
+    </footer>
 </comment>
