tweaking some comment UI tooltips

--- a/partials/CodeComment.html
+++ b/partials/CodeComment.html
@@ -3,6 +3,6 @@
     <code contenteditable="true"></code>
     <footer>
         <note contenteditable="true"></note>
-        <button class="delete"></button>
+        <button class="delete" title="Delete Comment"></button>
     </footer>
 </comment>
