adding start of Home view to display and load reviews

--- a/app/partials/ImportDialog.html
+++ b/app/partials/ImportDialog.html
@@ -15,7 +15,7 @@
             </div>
         </content>
         <footer class="import-content">
-            <button class="close" style="display: none">Back</button>
+            <button class="close">Back</button>
             <div class="filler"></div>
             <button class="save disabled">Create Review</button>
         </footer>
